feat: Update dependencies and Vite configuration
This commit updates various dependencies to their latest compatible versions and refactors the Vite configuration to a more standard setup. It also adjusts TypeScript configurations for better compatibility and build processes.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.1",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "leaflet": "https://aistudiocdn.com/leaflet@^1.9.4",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.28.0?external=react,react-dom"
+    "react-router-dom": "https://esm.sh/react-router-dom@6.28.0?external=react,react-dom",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
